# code-tldr

./: .env.example  Dockerfile  pyproject.toml  sample.md  sample_diff.txt  temp.toml
app/: main.py
app/api/: __init__.py
app/api/v1/: __init__.py  review.py
app/core/: config.py
app/schemas/: review.py
app/services/: __init__.py  diff.py
